--- a/index.html
+++ b/index.html
@@ -1,13 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rabbi Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Caveat&family=Jost:wght@100&family=Oooh+Baby&family=PT+Sans:wght@700&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Caveat&family=Jost:wght@100&family=PT+Sans:wght@700&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h2 id="hey">Hey,This is</h2>
+            <h1 id="myname">RABBI AHEMED</h1>
+            <h3><span> Every story I create, creates me. I write to create myself.</span></h3>
+            <p>
+            <h5>Love myself I do. Not everything, but I love the good as well as the bad. I love my crazy lifestyle, and
+                I love my hard discipline. I love my freedom of speech and the way my eyes get dark when I'm tired. I
+                love that I have learned to trust people with my heart, even if it will get broken. I am proud of
+                everything that I am and will become.</h5>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/rabbi-ahemed-159503169">View My
+                LINKEDIN Profile</a>
+            </p>
+        </div>
+        <div class="half-width">
+            <img src="images/mypiccopy.png" alt="">
+        </div>
+    </section>
+
+
 </body>
+
 </html>
