--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
             <img src="images/mypiccopy.png" alt="">
         </div>
     </section>
+    <section class="Dream">
+        <div class="half-width">
+            <img src="showOff/dream.png" alt="">
+
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>You are capable of more than you know. Choose a goal that seems right for you and strive to be the best,
+                however hard the path. Aim high. Behave honorably. Prepare to be alone at times, and to endure failure.
+                Persist!Never quit.</h2>
+
+        </div>
+
+    </section>
 
 
 </body>
