added footer images and flex

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h2 id="hey">Hey,This is</h2>
             <h1 id="myname">RABBI AHEMED</h1>
@@ -47,22 +47,50 @@
             <img src="images/mypiccopy.png" alt="">
         </div>
     </section>
-    <section class="Dream">
+    <section class="dream-big flexible-container">
         <div class="half-width">
-            <img src="showOff/dream.png" alt="">
+            <img src="images/dream.png" alt="">
 
         </div>
         <div class="half-width">
             <h1>Dream Big</h1>
-            <h2>You are capable of more than you know. Choose a goal that seems right for you and strive to be the best,
-                however hard the path. Aim high. Behave honorably. Prepare to be alone at times, and to endure failure.
-                Persist!Never quit.</h2>
+            <h3><span>Aim high. Behave honorably.</span></h3>
+            <h3>My dream is to be a skilled web developer</h3>
+            <a class="link-button" target="_blank" href="https://github.com/RabbiAhemed">View My Github Profile</a>
+
+        </div>
+
+
+    </section>
+    <section class="experience-area">
+        <h1>Experience</h1>
+        <div id="developer" class="flexible-container">
+            <div class="experience-item">
+                <h1>Web development learner</h1>
+                <h3><span>Web development is fun</span>
+                    <h4>2022-present |
+                        Advance level css.I have learned about html tags and now
+                        learning more about css
+                        styles</h4>
+                </h3>
+
+            </div>
+            <div id="hero-learner" class="experience-item">
+                <h1>Hero Learner</h1>
+                <h3><span>I have always been a learner because I knew nothing.</span></h3>
+                <h4>I am learning web development from programminghero.I find their mentorship so
+                    great</h4>
+
+
+            </div>
 
         </div>
 
     </section>
 
-
+    <footer>
+        <p>Designed by Rabbi Ahemed <i>5th january 2022</i></p>
+    </footer>
 </body>
 
 </html>
