--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Rabbi Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,10 +38,10 @@
             <h1 id="myname">RABBI AHEMED</h1>
             <h3><span> Every story I create, creates me. I write to create myself.</span></h3>
             <p>
-            <h5>Love myself I do. Not everything, but I love the good as well as the bad. I love my crazy lifestyle, and
-                I love my hard discipline. I love my freedom of speech and the way my eyes get dark when I'm tired. I
-                love that I have learned to trust people with my heart, even if it will get broken. I am proud of
-                everything that I am and will become.</h5>
+            <h3>Love myself I do. Not everything, but I love the good as well as the bad. I love my crazy lifestyle, and
+                I love my hard discipline. I love my freedom of speech and the way my eyes get dark when I'm tired. I am
+                proud of
+                everything that I am and will become.</h3>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/rabbi-ahemed-159503169">View My
                 LINKEDIN Profile</a>
             </p>
@@ -67,19 +70,19 @@
         <div id="developer" class="flexible-container">
             <div class="experience-item">
                 <h1>Web development learner</h1>
-                <h3><span>Web development is fun</span>
-                    <h4>2022-present |
-                        Advance level css.I have learned about html tags and now
-                        learning more about css
-                        styles</h4>
-                </h3>
+                <h3><span>Web development is fun</span></h3>
+                <h3>2022-present |
+                    Advance level css.I have learned about html tags and now
+                    learning more about css
+                    styles</h3>
+
 
             </div>
             <div id="hero-learner" class="experience-item">
                 <h1>Hero Learner</h1>
                 <h3><span>I have always been a learner because I knew nothing.</span></h3>
-                <h4>I am learning web development from programminghero.I find their mentorship so
-                    great</h4>
+                <h3>I am learning web development from programming-hero.I find their mentorship so
+                    great</h3>
 
 
             </div>
